# WeatherOOP

./: .gitignore  PoetryGuidance.py  README.md  Weather UI  App.pptx  _requirements.txt  cache_file.pkl  main.py  pdb_Guideance.py  pyproject.toml  requirements.txt
UI/: app.py  menu.py  tcl_ui_app.py
UI/pages/: admin.py  service_add_root.py  super-admin.py  user.py
models/: Cache.py  cache.py  file.env  weather_data.py
models/Deserilaized/: Deser_fact_mtd.py  Deserializer_Factory.py  desi_plotH3D5.py
parsers/: SpecificParser.py  base_parser.py  h3d5_parser.py
services/: WeatherServicePrinter.py  api_gateway_manager.py  plot_data.py  queue_manager.py  weather_manager.py  weather_service_printer.py
utils/: EncodingUtils.py  IpNetUtil.py  TimeUtils.py  Time_Utils.py  debug_print.py  event.py  file
