[tool.poetry]
name = "weatheroop"
version = "0.1.0"
description = ""
authors = ["GuyYar1 <132554415+GuyYar1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
